--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
 
-@import url('http://fonts.cdnfonts.com/css/vertigo-brk');
+@import url('https://fonts.cdnfonts.com/css/vertigo-brk');
 
 .rainbow-text {
     background-image: linear-gradient(to left, yellow, orange, violet, green, green);
