--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 
-@import url('http://fonts.cdnfonts.com/css/vertigo-brk');
-@import url('http://fonts.cdnfonts.com/css/vertigo-brk-2');
+@import url('https://fonts.cdnfonts.com/css/vertigo-brk');
+@import url('https://fonts.cdnfonts.com/css/vertigo-brk-2');
 
 .rainbow-text {
     background-image: linear-gradient(to left, yellow, orange, violet, green, green);
