--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
     background-clip: padding-box;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    font-size: 65px;
+    font-size: 3em;
     padding: 25px;
     margin-top: 175px;
     text-align: right;
